--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Online portfolio til Oliver Eierstrand">
-    <title>Oliver Eierstrand</title>
+    <title>Oliver Eierstrand portfolio - frontend- og webudvikler</title>
   </head>
   <body>
     <div id="app"></div>
